implementacion llamadas
